--- a/en/html/About.html
+++ b/en/html/About.html
@@ -40,10 +40,10 @@
 \vcs - run as VCS editor<br>
 \sa_mobile - run as SA Mobile editor.<br>
 <p class="note">You can change the <a href="edit_modes.html">current edit mode</a> in run-time.</p>
-\debug - <a href="console.htm#DEBUG">enables the debug options</a><br>
+\debug - <a href="console.html#DEBUG">enables the debug options</a><br>
 \compile input_file_path [output_file_path] - run compilation in hidden mode at the program startup<br>
 <p class="note">Example: \compile C:\myscm.txt C:\myscm.scm<br>
-An <span class="i">output_file_path</span> parameter is optional. If there is no path specified for an output file, the compiler uses <a href="O_102.htm#name_formats">name formats</a>. Pay attention that the source file must have no errors. If at compilation there will be errors, they will be logged in the file compile.log. When compilation ends, the program shuts down.</p>
+An <span class="i">output_file_path</span> parameter is optional. If there is no path specified for an output file, the compiler uses <a href="O_102.html#name_formats">name formats</a>. Pay attention that the source file must have no errors. If at compilation there will be errors, they will be logged in the file compile.log. When compilation ends, the program shuts down.</p>
 \nosplash - run the program without the startup screen
 
 <h3>Credits</h3>
