--- a/en/html/About2.html
+++ b/en/html/About2.html
@@ -79,9 +79,9 @@
 	<li>new edit mode - <a href="edit_modes.html">GTA SA SCR</a></li>
 	<li>variables can be quickly <a href="variables.html">declared using a type name prefix</a></li>
 	<li>CLEO updated to the version 4.3.16</li>
-	<li>added <a href="features.htm#jumpLabel">the InstaSearch feature</a> (formerly 'jump to label' function)</li>
-	<li><a href="features.htm#mission_names">mission names</a> can be changed by editing appropriate missions.txt files</li>
-	<li>improved <a href="O_101.htm#association">association</a> of the script file extensions with Sanny Builder</li>
+	<li>added <a href="features.html#jumpLabel">the InstaSearch feature</a> (formerly 'jump to label' function)</li>
+	<li><a href="features.html#mission_names">mission names</a> can be changed by editing appropriate missions.txt files</li>
+	<li>improved <a href="O_101.html#association">association</a> of the script file extensions with Sanny Builder</li>
 	<li>Sanny Builder only checks if the game directory path is not empty, no checks for specific files (such as an .exe)</li>
 	<li>minor improvements in the SB updating feature</li>
 	<li>changed the Sanny Builder icon and the menu icons</li>
@@ -91,32 +91,32 @@
 <ul>
 	<li>CLEO updated to the version 4.3.14</li>
 	<li>fixed minor interface glitches for hi-res displays</li>
-	<li>updated <a href="O_101.htm#lang">German, Polish, Chinese, Ukrainian translations</a></li>
+	<li>updated <a href="O_101.html#lang">German, Polish, Chinese, Ukrainian translations</a></li>
 </ul>
 <a name='3.1.3'></a><h3>v. 3.1.3 - 22.12.2013</h3>
 <ul>
 	<li>added <a href="edit_modes.html">support for iOS and Android versions</a> of GTA: San Andreas</li>
-	<li><a href="O_103.htm#auto">a looking depth value</a> is now used when making a list of constants</li>
-	<li>updated <a href="O_101.htm#lang">Chinese and German translations</a></li>
+	<li><a href="O_103.html#auto">a looking depth value</a> is now used when making a list of constants</li>
+	<li>updated <a href="O_101.html#lang">Chinese and German translations</a></li>
 </ul>
 <a name='3.1.2'></a><h3>v. 3.1.2 - 06.10.2013</h3>
 <ul>
 	<li>added Czech translation</li>
-	<li>added <a href="O_101.htm#association">options to associate file extensions</a> .cs and .cm with Sanny Builder</li>
+	<li>added <a href="O_101.html#association">options to associate file extensions</a> .cs and .cm with Sanny Builder</li>
 	<li>fixed bugs <a href="http://bugs.sannybuilder.com/view.php?id=11">#0000011</a>, <a href="http://bugs.sannybuilder.com/view.php?id=20">#0000020</a></li>
 </ul>
 <a name='3.1.1'></a><h3>v. 3.1.1 - 22.09.2013</h3>
 <ul>
-	<li>added a new directive <a href="directives.htm#OPCODE">$OPCODE</a> to register a new opcode in the script</li>
-	<li>corrected behaviour of the directive <a href="directives.htm#INCLUDE">$INCLUDE</a> while scanning directories for the file</li>
+	<li>added a new directive <a href="directives.html#OPCODE">$OPCODE</a> to register a new opcode in the script</li>
+	<li>corrected behaviour of the directive <a href="directives.html#INCLUDE">$INCLUDE</a> while scanning directories for the file</li>
 	<li>fixed bugs <a href="http://bugs.sannybuilder.com/view.php?id=5">#0000005</a>, <a href="http://bugs.sannybuilder.com/view.php?id=19">#0000019</a></li>
 </ul>
 <a name='3.1.0'></a><h3>v. 3.1.0 - 14.09.2013</h3>
 <ul>
 	<li>VCSCM.ini is updated to include opcodes for the GTA VC mobile version and unsupported opcodes</li>
-	<li>when the option <a href="O_101.htm#SCM">Add extra info to SCM</a> is enabled, Sanny Builder remembers the game a script is compiled for, to use the <a href="features.htm#current edit mode">proper edit mode</a> when decompiling</li>
-	<li>when the option Add extra info to SCM is enabled, Sanny Builder adds a source code into a script file (only when the directive <a href="directives.htm#EXTERNAL">$EXTERNAL</a> or <a href="directives.htm#CLEO">$CLEO</a> is present)</li>
-	<li>added a new directive <a href="directives.htm#NOSOURCE">$NOSOURCE</a> to prohibit including a source code into a compiled script</li>
+	<li>when the option <a href="O_101.html#SCM">Add extra info to SCM</a> is enabled, Sanny Builder remembers the game a script is compiled for, to use the <a href="features.html#current edit mode">proper edit mode</a> when decompiling</li>
+	<li>when the option Add extra info to SCM is enabled, Sanny Builder adds a source code into a script file (only when the directive <a href="directives.html#EXTERNAL">$EXTERNAL</a> or <a href="directives.html#CLEO">$CLEO</a> is present)</li>
+	<li>added a new directive <a href="directives.html#NOSOURCE">$NOSOURCE</a> to prohibit including a source code into a compiled script</li>
 	<li>some <a href="hotkeys.html">hotkeys</a> are now customizable in <a href="O_105.html">the options</a></li>
 	<li>added a feature to check automatically if an update exists at the program startup</li>
 	<li><a href="directives.html">directives</a> $VERSION and $VERSION_RESTORE are deprecated</li>
@@ -144,25 +144,25 @@
 	<li>the compiler is no more allowed to compile a string like text1"text2" or text1'text2' (without a leading quotation mark)</li>
 	<li>the compiler is allowed to compile the comment characters within a string ("{text1}text2")</li>
 	<li>the semicolon (;) can not be used to comment out a line of the code</li>
-	<li>changed syntax of <a href=console.htm#DEBUG>the \debug parameter</a></li>
-	<li>added flag icons for <a href="O_101.htm#lang">the available languages</a> in the options</li>
+	<li>changed syntax of <a href=console.html#DEBUG>the \debug parameter</a></li>
+	<li>added flag icons for <a href="O_101.html#lang">the available languages</a> in the options</li>
 	<li>fixed some issues in VCS decompiling</li>
 	<p class="note">* File.Open, Audiostream.Load, Audiostream.Load3D were <a href="classes.html">methods</a> in CLEO 4. Now they are <a href="classes.html"> properties</a>. It means, if you get an error when compiling old sources with these commands, change their syntax to:<br>
 	var = File.Open(file_name, mode)<br>
 	var = Audiostream.Load(file_name)<br>
 	var = Audiostream.Load3D(file_name)</p>
-	<p class="note">** <a href="classes.htm#propertystringlimit">There is a limit</a> on using space characters in such parameter.</p>
+	<p class="note">** <a href="classes.html#propertystringlimit">There is a limit</a> on using space characters in such parameter.</p>
 </ul>
 <a name='3.06'></a><h3>v. 3.06 - 17.06.2013</h3>
 <ul>
 	<li>added <a href="additional.html">new operators ++ and --</a></li>
-	<li>added support for <a href="features.htm#CodeComments">block comments</a> /* &nbsp; */</li>
+	<li>added support for <a href="features.html#CodeComments">block comments</a> /* &nbsp; */</li>
 	<li>SASCM.INI is updated with help of the <a href="http://gtag.gtagaming.com/opcode-database/" target="_blank
 	">GTAG Database</a></li>
 	<li><a href="classes.html">properties</a> Actor.Armour and Actor.Car are replaced with their correct versions Actor.AddArmour and Actor.MissionCar</li>
 	<li>added new property Actor.CurrentCar for the opcode 03C0 in the SA and VC classes.</li>
 	<li>added <a href="hotkeys.html">new hotkeys</a> Ctrl+Num+ and Ctrl+Num- to quickly change the text size</li>
-	<li>Sanny Builder now remembers a number of closed files for the option <a href="O_103.htm#LoadAllClosedFiles">Load all closed files</a></li>
+	<li>Sanny Builder now remembers a number of closed files for the option <a href="O_103.html#LoadAllClosedFiles">Load all closed files</a></li>
 	<li>fixed bug when the compiler failed to compile numerous <a href="hex_end.html">hex..end constructs</a></li>
 	<li>fixed bug of version 3.05 when the program hung on startup trying to open a file passed as a parameter</li>
 </ul>
@@ -172,7 +172,7 @@
 	<li>the CLEO library updated to version 4.1.1.30f (CLEO 4 by Alien)</li>
 	<li>added possibility to install CLEO for GTA III and Vice City (made by Alien)</li>
 	<li>the opcode files (**SCM.ini, opcodes.txt) replaced with the ones from the CLEO 4 library installation</li>
-	<li>new <a href="About.htm#CommandLineParams">command line parameter</a> \nosplash</li>
+	<li>new <a href="About.html#CommandLineParams">command line parameter</a> \nosplash</li>
 </ul>
 <a name='3.04'></a><h3>v. 3.04 - 17.08.2008</h3>
 <ul>
@@ -204,18 +204,18 @@
 	<li>the <a href="Cleo.html">CLEO 3</a> library is integrated into Sanny Builder</li>
 	<li>VCS SCM format support (decompiling only)</li>
 	<li><a href="constants.html">constants</a> support</li>
-	<li>new directives <a href="directives.htm#INCLUDE">$INCLUDE</a>,<a href="directives.htm#EXTERNAL">$EXTERNAL</a>,<a href="directives.htm#CLEO">$CLEO</a></li>
-	<li>writing of <a href="O_101.htm#SCM">the additional info</a> in the end of the main.scm</li>
-	<li><a href="O_102.htm#LABLE">custom arrays support</a></li>
-	<li>possibility to decompile the files <a href="console.htm#SKIP_SCM">having no header</a></li>
+	<li>new directives <a href="directives.html#INCLUDE">$INCLUDE</a>,<a href="directives.html#EXTERNAL">$EXTERNAL</a>,<a href="directives.html#CLEO">$CLEO</a></li>
+	<li>writing of <a href="O_101.html#SCM">the additional info</a> in the end of the main.scm</li>
+	<li><a href="O_102.html#LABLE">custom arrays support</a></li>
+	<li>possibility to decompile the files <a href="console.html#SKIP_SCM">having no header</a></li>
 	<li>ability to create an external script named AAA</li>
-	<li>new command line <a href="About.htm#CommandLineParams">parameter \compile</a></li>
+	<li>new command line <a href="About.html#CommandLineParams">parameter \compile</a></li>
 	<li>possibility to use the floating-point values as a counter value in <a href="loops.html">FOR..END</a> loop</li>
 	<li>the commands WriteMem and ReadMem are not supported anymore</li>
 	<li>possibility to use the regular expressions when searching</li>
-	<li>possibility to save a source file in the <a href="O_104.htm#RTF">RTF or HTML</a> formats</li>
-	<li>ability to <a href="O_101.htm#F8">skip the splashes</a> at SA startup</li>
-	<li>new key combo <a href="hotkeys.htm#Ctrl_Enter">Ctrl+Enter</a></li>
+	<li>possibility to save a source file in the <a href="O_104.html#RTF">RTF or HTML</a> formats</li>
+	<li>ability to <a href="O_101.html#F8">skip the splashes</a> at SA startup</li>
+	<li>new key combo <a href="hotkeys.html#Ctrl_Enter">Ctrl+Enter</a></li>
 	<li>updated <a href="GTA_INI.html">SASCM.INI</a></li>
 </ul>
 <a name='2.99e'></a><h3>v. 2.99e - 01.01.2007</h3>
@@ -223,7 +223,7 @@
 	<li>fixed bug when parts of the code within the HEX..END contruction disappeared in the debug_mode decompiling</li>
 	<li>a <a href="hex_end.html">hex..end</a> statement could accept the aDMA type</li>
 	<li>a FOR statement could accept the model identifiers as the counter values</li>
-	<li>a hex..end statement could accept the <a href="hex_end.htm#strings">strings</a></li>
+	<li>a hex..end statement could accept the <a href="hex_end.html#strings">strings</a></li>
 </ul>
 <a name='2.99d'></a><h3>v. 2.99d - 03.12.2006</h3>
 <ul>
