--- a/en/html/O_101.html
+++ b/en/html/O_101.html
@@ -51,10 +51,10 @@
 	<p class="text">This option turns the decompiling output from high-level to low-level and vice versa. If this option is unchecked, the decompiler uses available classes and keywords instead of opcodes. In addition, there are no opcodes for simple math expressions. If option checked, all opcodes are present in the output file.</p>
 	<p class="text"><b><u><b><u><a name="mission"></a></u></b>Replace mission numbers</u></b></p>
 	<p class="text">When this option checked, the decompiler  replaces mission number in the opcode <b>start_mission</b> with mission name. The mission name is the label name defined in the file header. <br>
-	This name also could be used for <a href="features.htm#jumpLabel">quick movement</a> to the mission code.
+	This name also could be used for <a href="features.html#jumpLabel">quick movement</a> to the mission code.
 	<p class="text"><b><u>Insert original mission names</u></b></p>
 	<p class="text">When this option checked,  the decompiler adds predefined original mission names as comments for the  opcode <b>start_mission</b> and for the  line DEFINE MISSION in the file header.</p>
 	<p class="text"><b><u><a name="SCM"></a>Add extra info to SCM </u> </b></p>
-	<p class="text">If this option is  checked the compiler adds extra information to the end of the file main.scm.  This info will be used later when this file is decompiled in order to bring it to  maximum conformity with original source. The following data is added to the end  of the main.scm:  <a href="hex_end.html">hex..end constructs</a> offsets, <a href="variables.html">global variables names</a> and so on. Pay attention that the file compiled in  such way cannot be decompiled in older SB versions (except the case when <a href="console.htm#IGNORE_UNKNOWN">ignore_unknown</a> option is enabled).
+	<p class="text">If this option is  checked the compiler adds extra information to the end of the file main.scm.  This info will be used later when this file is decompiled in order to bring it to  maximum conformity with original source. The following data is added to the end  of the main.scm:  <a href="hex_end.html">hex..end constructs</a> offsets, <a href="variables.html">global variables names</a> and so on. Pay attention that the file compiled in  such way cannot be decompiled in older SB versions (except the case when <a href="console.html#IGNORE_UNKNOWN">ignore_unknown</a> option is enabled).
 </p>
 <script src="../../js/partial/footer.js"></script>
