--- a/en/html/O_102.html
+++ b/en/html/O_102.html
@@ -38,7 +38,7 @@
 	    <p class="text">These options  make the decompiler use or not the custom names for various script literals.<br><br>
   The labels names  are contained in the file CustomLabels.ini in the folder SB\data\&lt;game&gt;. This  file contains the list of labels names and offsets (for main.scm version 1.0).  If the first box checked, the decompiler names the label as defined. <br><br>
 	      The variables  names are present in the file CustomVariables.ini for each game. It looks like  the list of global variables addresses (DMA) and their textual representation. If  this box checked, the decompiler gives to the global variable its custom name.<br><br>
-	    <span class="text">The arrays names list are present in the file CustomArrays.ini.  Its syntax is as follows: the first number is the global variable name (DMA) which  is the first element of the array (array name), the second – array size, the  third – custom name. This option is used in order to decompiler adds an index  to some global variables being an array. So, these variables become <a href="variables.htm#Index">indexed ones.</a></span></p>
+	    <span class="text">The arrays names list are present in the file CustomArrays.ini.  Its syntax is as follows: the first number is the global variable name (DMA) which  is the first element of the array (array name), the second – array size, the  third – custom name. This option is used in order to decompiler adds an index  to some global variables being an array. So, these variables become <a href="variables.html#Index">indexed ones.</a></span></p>
 
 	<a name="strA"></a>
 	<hr>
