--- a/en/html/additional.html
+++ b/en/html/additional.html
@@ -79,7 +79,7 @@
 <p>Calculates the square of a variable passed as the parameter and stores the result in this variable.</p>
 
 <pre>sqr(<span class="variable">$var</span>) => <span class="variable">$var</span> *= <span class="variable">$var</span></pre>
-<p class="note">Type of the variable has to be defined. See <a href="variables.htm#VAR_END">Variables</a> for more information.</p>
+<p class="note">Type of the variable has to be defined. See <a href="variables.html#VAR_END">Variables</a> for more information.</p>
 
 <h3 name="RANDOM">RANDOM</h3>
 <p>Generates a random number within a range specified by the parameters.</p>
