--- a/en/html/articles2.html
+++ b/en/html/articles2.html
@@ -613,7 +613,7 @@ seconds), and it will be at top of th page highlighted in yellow. <br>
                  <span style="font-size: 14pt; line-height: 100%;"><u><b><a name="4thread"> 4. Threads : </a></b></u></span>
                  <br>
                 <br>
-                There isn't much to say more than what's been told in <a href="articles11.htm#4thredlab">Part I : 4. Threads and labels</a>. <br>
+                There isn't much to say more than what's been told in <a href="articles11.html#4thredlab">Part I : 4. Threads and labels</a>. <br>
                 <br>
                 Just that you create them with 004F like that :<br>
 <strong>CODE </strong><br><div class="imgcursor" align="right"><span class="kbd"><img src="img/en/ico_cb.gif" alt="Copy to Clipboard" onClick="ClipBoard11();" height="16" width="16"></span>
@@ -1053,7 +1053,7 @@ seconds), and it will be at top of th page highlighted in yellow. <br>
                         </b> is the model. Here you can use any objects
                         defined in the map files (.ide files in GTA San
                         Andreas\data\maps folder) as long as you defined the
-                        object in define object section in the scm. See <a href="articles11.htm#1scmarchi">Part I : 1. Main.scm
+                        object in define object section in the scm. See <a href="articles11.html#1scmarchi">Part I : 1. Main.scm
                       architecture</a>.</li>
                       <li class="Myli"><span class="general1-number">2502.5601 -1566.84
                         24.38</span> are the coordinates.</li>
