--- a/en/html/features.html
+++ b/en/html/features.html
@@ -30,7 +30,7 @@
 
 <h3>Displaying Various Information About Opcode</h3>
 
-<p>SB displays a number of parameters for the opcode, a digital value of the model under the cursor in the statusbar when the option <a href="O_103.htm#IDE">Show opcode info</a> is enabled.</p>
+<p>SB displays a number of parameters for the opcode, a digital value of the model under the cursor in the statusbar when the option <a href="O_103.html#IDE">Show opcode info</a> is enabled.</p>
 
 <h3>SA Mission Builder Source Code Converter</h3>
 <p>Sanny supports SAMB 0.33 syntax. To use the converter, open the source file in Sanny Builder and select menu  item: 'Tools -&gt; Code converter -&gt; MB -&gt; SB'.  Note the convertor uses the file 'MB.ini' from  the SB directory which contains the variables used by SAMB and their memory addresses. If you added your own variables in the file variables.ini (from the SAMB 0.33), copy them into the file MB.ini.</p>
@@ -86,7 +86,7 @@
 <p>Sanny Builder allows using a mission name in the opcode 'start_mission'. The mission name is the label defined with a DEFINE MISSION command. For example, you have:</p>
 <pre>DEFINE MISSION <span class="number">10</span> AT <span class="label">@MYMISSION</span></pre>
 <p>Instead of <span class="reservedword">start_mission</span> <span class="number">10</span> you can use <span class="reservedword">start_mission</span> MYMISSION.</p>
-<p>There is also the <a href="O_101.htm#mission">Replace Mission Numbers</a> option. When it's enabled, the decompiler automatically replaces all mission numbers with their names.</p>
+<p>There is also the <a href="O_101.html#mission">Replace Mission Numbers</a> option. When it's enabled, the decompiler automatically replaces all mission numbers with their names.</p>
 <p>To call the mission names list, press <span class="kbd">Ctrl</span>+<span class="kbd">Space</span>. The cursor has to be directly after the start_mission command.</p>
 <p>Additionally, you can use <a href="#jumpLabel">the InstaSearch</a> to jump to the mission from its name.</p>
 
