--- a/en/html/hotkeys.html
+++ b/en/html/hotkeys.html
@@ -107,19 +107,19 @@
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">Num4</span> / <span class="kbd">Num6</span></td>
-	  <td><a href="features.htm#jumpLabel">search the word</a> under the cursor below/above in the code</td>
+	  <td><a href="features.html#jumpLabel">search the word</a> under the cursor below/above in the code</td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">Num2</span></td>
-	  <td><a href="features.htm#jumpLabel">jump to the label</a> under the cursor</td>
+	  <td><a href="features.html#jumpLabel">jump to the label</a> under the cursor</td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">Num8</span></td>
-	  <td><a href="features.htm#jumpLabel">return the cursor back</a> to the previous position (before InstaSearch)</td>
+	  <td><a href="features.html#jumpLabel">return the cursor back</a> to the previous position (before InstaSearch)</td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">Enter</span></td>
-	  <td>open file which name is under the cursor (see also <a href="directives.htm#INCLUDE">relative path priorities</a>)</td>
+	  <td>open file which name is under the cursor (see also <a href="directives.html#INCLUDE">relative path priorities</a>)</td>
 	</tr>
 	<tr><td><h3>Code</h3></td></tr>
 	<tr>
@@ -132,11 +132,11 @@
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">Shift</span>+<span class="kbd">C</span></td>
-	  <td><a href="features.htm#Player coords managing">insert the player's coords</a></td>
+	  <td><a href="features.html#Player coords managing">insert the player's coords</a></td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">Shift</span>+<span class="kbd">E</span></td>
-	  <td><a href="features.htm#Player coords managing">insert the player's z_angle</a></td>
+	  <td><a href="features.html#Player coords managing">insert the player's z_angle</a></td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">F1</span></td>
@@ -148,19 +148,19 @@
 	</tr>
 	<tr>
 	  <td><span class="kbd">F2</span></td>
-	  <td><a href="features.htm#use macros">use macro</a></td>
+	  <td><a href="features.html#use macros">use macro</a></td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">J</span></td>
-	  <td><a href="features.htm#use macros">show list of macros</a></td>
+	  <td><a href="features.html#use macros">show list of macros</a></td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">M</span></td>
-	  <td><a href="features.htm#use macros">start/stop recording of a macro</a> (keystroke pressings sequence)</td>
+	  <td><a href="features.html#use macros">start/stop recording of a macro</a> (keystroke pressings sequence)</td>
 	</tr>
 	<tr>
 	  <td><span class="kbd">Ctrl</span>+<span class="kbd">P</span></td>
-	  <td><a href="features.htm#use macros">replay macro/pause while processing</a></td>
+	  <td><a href="features.html#use macros">replay macro/pause while processing</a></td>
 	</tr>
 
 	<tr>
