--- a/en/html/coding.html
+++ b/en/html/coding.html
@@ -12,17 +12,17 @@
 
 <h2>Coding</h2>
 <ul class='l1'>
-<li><a href="data_types.html">Data types</a></li>
-<li><a href="variables.html">Variables</a></li>
-<li><a href="loops.html">Constants</a></li>
-<li><a href="arrays.html">Arrays</a></li>
-<li><a href="conditions.html">Conditions</a></li>
-<li><a href="loops.html">Loops</a></li>
-<li><a href="classes.html">Classes</a></li>
-<li><a href="keywords.html">Keywords</a></li>
-<li><a href="additional.html">Additional commands</a></li>
-<li><a href="hex_end.html">HEX..END</a></li>
-<li><a href="directives.html">Directives</a></li>
+<li><a href="coding.data_types.html">Data types</a></li>
+<li><a href="coding.variables.html">Variables</a></li>
+<li><a href="coding.loops.html">Constants</a></li>
+<li><a href="coding.arrays.html">Arrays</a></li>
+<li><a href="coding.conditions.html">Conditions</a></li>
+<li><a href="coding.loops.html">Loops</a></li>
+<li><a href="coding.classes.html">Classes</a></li>
+<li><a href="coding.keywords.html">Keywords</a></li>
+<li><a href="coding.additional.html">Additional commands</a></li>
+<li><a href="coding.hex_end.html">HEX..END</a></li>
+<li><a href="coding.directives.html">Directives</a></li>
 </ul>
 </p>
 <script src="../../js/partial/footer.js"></script>
