--- a/en/html/coding.keywords.html
+++ b/en/html/coding.keywords.html
@@ -12,11 +12,13 @@
 A keyword is a single word that replaces the opcode for simple commands.<br>
 For example, the keyword WAIT can be used  instead of opcode 0001.<br>
 <br>
-To demonstrate: </p>
-<DIV class=mycode5>	<span class="general1-reservedword">wait</span> <span class="general1-number">0</span></DIV>
+To demonstrate:
+</p>
+<pre>wait 0</pre>
 <p>
 	instead of</p>
-<DIV class=mycode5>	0001: <span class="general1-reservedword">wait</span> <span class="general1-number">0</span></DIV>
-<p>The keywords list can be displayed by  pressing Ctrl+Space.
+<pre>0001: wait 0</pre>
+<p>
+The keywords list can be displayed by pressing Ctrl+Space.
 </p>
 <script src="../../js/partial/footer.js"></script>
